Move to new DetSetVector collections and cope with multiple digi collections

--- a/test/trigger.cfg
+++ b/test/trigger.cfg
@@ -12,13 +12,13 @@ process HLT ={
   PSet debugmessages.txt = { string threshold = "INFO"}
   vstring debugModules={"trigger"}
  }
+
         es_module = TrackerGeometricDetESModule {}
         es_module = TrackerDigiGeometryESModule {}
+
        module trigger = MTCCHLTrigger{
-        bool SelOnClusterCharge=true
         bool SelOnDigiCharge=false
-        int32 ClusterChargeThreshold=180
-        int32 DigiChargeThreshold=180
+        int32 ChargeThreshold=180
 	}
      path p = {trigger}
 }
