--- a/test/trigger.cfg
+++ b/test/trigger.cfg
@@ -1,24 +1,24 @@
 process HLT ={
 
 	source = PoolSource { 
-		  untracked vstring fileNames = {'file:tmp87.root'}
+		  untracked vstring fileNames = {'file:cosmic_digi.root'}
   	       int32 MaxEvents = 2	
 	}
-     es_source = XMLIdealGeometryESSource {
-			FileInPath GeometryConfiguration="trackerSimConfiguration_MTCC.xml" 
-			string rootNodeName = ""
-			}
- service = MessageLogger {  vstring destinations   = { "debugmessages.txt" }
-  PSet debugmessages.txt = { string threshold = "INFO"}
-  vstring debugModules={"trigger"}
- }
-
-        es_module = TrackerGeometricDetESModule {}
-        es_module = TrackerDigiGeometryESModule {}
-
-       module trigger = MTCCHLTrigger{
+ include "RecoTracker/SingleTrackPattern/test/messages.cfg"
+ include "RecoTracker/SingleTrackPattern/test/services.cfi"
+ include "Geometry/CMSCommonData/data/cmsMTCCGeometryXML.cfi"
+ module trigger = MTCCHLTrigger{
         bool SelOnDigiCharge=false
         int32 ChargeThreshold=180
+#        string  RawToDigiProducer= "rawproducer"
+#        string  ZSDigiProducer ="zsproducer"
+        string 	ClusterProducer = "ThreeThresholdClusterizer"
 	}
+  module GEN-SIM-DIGI = PoolOutputModule
+   {
+      untracked string fileName = "filtered.root"
+   }
+
      path p = {trigger}
+  endpath outpath = { GEN-SIM-DIGI }
 }
