monitor the ouput

--- a/test/trigger.cfg
+++ b/test/trigger.cfg
@@ -17,6 +17,9 @@ process HLT ={
   module GEN-SIM-DIGI = PoolOutputModule
    {
       untracked string fileName = "filtered.root"
+         untracked PSet SelectEvents = {
+         vstring SelectEvents = { "p" }
+         }
    }
 
      path p = {trigger}
