update of collection names

--- a/test/trigger.cfg
+++ b/test/trigger.cfg
@@ -12,7 +12,7 @@ process HLT ={
         int32 ChargeThreshold=180
 #        string  RawToDigiProducer= "rawproducer"
 #        string  ZSDigiProducer ="zsproducer"
-        string 	ClusterProducer = "ThreeThresholdClusterizer"
+        string 	ClusterProducer = "siStripClusters"
 	}
   module GEN-SIM-DIGI = PoolOutputModule
    {
