--- a/test/FilterTEC.cfg
+++ b/test/FilterTEC.cfg
@@ -1,31 +1,42 @@
-process TECFILTER = {
+process FilterTEC = {
 
-#  include "DQM/SiStripCommon/data/MessageLogger.cfi"
-	
 # input files
 source = PoolSource
     {
      untracked vstring fileNames = {
-#    "file:2532_reco_cluster.root"
     "rfio:/castor/cern.ch/cms/testbeam/tkmtcc/P5_data/tracker_reprocessing/pass2_with_alignment/2532_reco_cluster.root"
      }
      untracked int32 maxEvents = 1000
     }
 
- # Cluster Filter
-    module TECClusterFilter = TECClusterFilter
-    {
-      string  ClusterProducer = "siStripClusters325"
-      # thresholds
-      int32 ChargeThresholdTEC = 20
-      # with clusters over above respective threshold
-      int32 MinNrOfTECClusters = 1
-      # detector modules to be excluded
-      vuint32 ModulesToBeExcluded = {}
-    }
 
-  module EventContentAnalyzer = EventContentAnalyzer{}
+# Cluster Filter
+   module TECClusterFilter = TECClusterFilter
+   {
+     string  ClusterProducer = "siStripClusters"
+     # thresholds
+     int32 ChargeThresholdTEC = 20
+     # with clusters over above respective threshold
+     int32 MinNrOfTECClusters = 1
+     # detector modules to be excluded
+     vuint32 ModulesToBeExcluded = {}
+   }
 
-  path SpecialTECFilter = {TECClusterFilter, EventContentAnalyzer}
+   # DQM services
+   service = DaqMonitorROOTBackEnd{}
+   module SiStripMonitorFilter = SiStripMonitorFilter
+   {
+   string FilterProducer="TECClusterFilter"
+   # by default do not write out any file with histograms
+   # can overwrite this in .cfg file with: replace
+   bool OutputMEsInRootFile = true
+   string OutputFileName="dqm_sistrip_filter.root"
+   }
 
+#  module EventContentAnalyzer = EventContentAnalyzer{}
+
+
+path filter = {TECClusterFilter}
+path dqm = {SiStripMonitorFilter}
+ 
 }
